[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/screen/CreateWorld.gd" type="Script" id=1]

[node name="CreateWorld" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VContainer"]
margin_right = 1280.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "Create a new world"
valign = 1

[node name="NameContainer" type="HBoxContainer" parent="VContainer"]
margin_top = 70.0
margin_right = 1280.0
margin_bottom = 94.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="VContainer/NameContainer"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="VContainer/NameContainer"]
margin_left = 52.0
margin_right = 1242.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Random name"

[node name="NewNameButton" type="Button" parent="VContainer/NameContainer"]
margin_left = 1252.0
margin_right = 1280.0
margin_bottom = 24.0
text = "<>"

[node name="Label2" type="Label" parent="VContainer"]
margin_top = 113.0
margin_right = 1280.0
margin_bottom = 163.0
rect_min_size = Vector2( 0, 50 )
text = "Initial region"
valign = 1

[node name="SizeContainer" type="HBoxContainer" parent="VContainer"]
margin_top = 184.0
margin_right = 1280.0
margin_bottom = 209.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 20

[node name="Label" type="Label" parent="VContainer/SizeContainer"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 19.0
text = "Size:"

[node name="SizeOption" type="OptionButton" parent="VContainer/SizeContainer"]
margin_left = 50.0
margin_right = 1280.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Choose the size"

[node name="TypeContainer" type="HBoxContainer" parent="VContainer"]
margin_top = 229.0
margin_right = 1280.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 16

[node name="Label" type="Label" parent="VContainer/TypeContainer"]
margin_top = 5.0
margin_right = 34.0
margin_bottom = 19.0
text = "Type:"

[node name="TypeOption" type="OptionButton" parent="VContainer/TypeContainer"]
margin_left = 50.0
margin_right = 1280.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Choose the type"

[node name="ButtonContainer" type="CenterContainer" parent="VContainer"]
margin_top = 274.0
margin_right = 1280.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 50 )

[node name="HContainer" type="HBoxContainer" parent="VContainer/ButtonContainer"]
margin_left = 555.0
margin_top = 12.0
margin_right = 725.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="CreateButton" type="Button" parent="VContainer/ButtonContainer/HContainer"]
margin_right = 75.0
margin_bottom = 25.0
rect_min_size = Vector2( 75, 25 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Create"

[node name="BackButton" type="Button" parent="VContainer/ButtonContainer/HContainer"]
margin_left = 95.0
margin_right = 170.0
margin_bottom = 25.0
rect_min_size = Vector2( 75, 25 )
text = "Back"
[connection signal="item_selected" from="VContainer/SizeContainer/SizeOption" to="." method="onSizeSelected"]
[connection signal="item_selected" from="VContainer/TypeContainer/TypeOption" to="." method="onTypeSelected"]
[connection signal="button_up" from="VContainer/ButtonContainer/HContainer/CreateButton" to="." method="onCreateButtonPressed"]
[connection signal="button_up" from="VContainer/ButtonContainer/HContainer/BackButton" to="." method="onBackButtonPressed"]
